--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
+.box {
+  border: 5px solid #395f5f;
+  padding: 50px;
+  margin-top: 50px;
+  margin-left: 200px;
+  margin-right: 200px;
+  background-color: #96c0c0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.title {
+  color: #395f5f;
+  justify-content: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.guesses{
+  color: #395f5f;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
+
 }
 
-.App-link {
-  color: #61dafb;
+.guess {
+  color: #4c7f7f;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.userInput {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  margin-left: 400px;
+  margin-bottom: 15px;
+  color: pink;
+}
+
+.makeControl {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  margin-left: 450px;
+}
+
+.restartGame {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  margin-left: 425px;
 }
